# otel-ebpf-profiler-operator

./: .gitignore  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  tox.ini
.github/: .jira_sync_config.yaml  pull_request_template.md
.github/workflows/: _terraform-tests-auto.yaml  _terraform-tests.yaml  pull-request.yaml  release.yaml  terraform-tests.yaml
src/: charm.py  config_builder.py  config_manager.py  constants.py  machine_lock.py  snap_management.py
src/loki_alert_rules/: error_level_logs_found.rule
terraform/: README.md  main.tf  output.tf  outputs.tf  variables.tf
tests/integration/: assertions.py  conftest.py  profiling-tls.feature  profiling.feature  self-monitoring.feature  self_monitoring.feature  test_colocated_profilers.py  test_profiling_integration.py  test_profiling_integration_tls.py  test_self_monitoring.py  test_smoke.py
tests/integration/pyroscope-tester/: charmcraft.yaml  requirements.txt  tox.ini
tests/integration/pyroscope-tester/lib/charms/pyroscope_coordinator_k8s/v0/: profiling.py
tests/integration/pyroscope-tester/src/: charm.py
tests/terraform/: main.tf  terraform_module.feature  test_terraform_module.py  variables.tf  versions.tf
tests/unit/: conftest.py  test_lifecycle.py  test_machine_lock.py  test_snap_mgmt.py
tests/unit/charm/: conftest.py  test_config.py  test_lifecycle.py  test_self_monitoring.py
